# proton-launch

./: Cargo.toml  README.md
proton-launch/: Cargo.toml
proton-launch-cli/: Cargo.toml
proton-launch/src/: lib.rs
proton-launch/src/command/: backup.rs  desktop_entry.rs  info.rs  run.rs  uninstall.rs
src/: command.rs  lib.rs  main.rs  paths.rs  proton.rs  shortcut.rs  steam.rs
src/command/: backup.rs  desktop_entry.rs  info.rs  install.rs  move_compat.rs  restore.rs  run.rs  runnable.rs  uninstall.rs
