
[workspace]
members = ["proton-launch-cli", "proton-launch"]

default-members = ["proton-launch-cli"]

[workspace.dependencies]
clap = { version = "4.1", features = ["derive", "string"] }

[workspace.package]
version = "0.1.1"
edition = "2021"
description = "Launch Windows games with Proton"
license = "MIT"