[package]
name = "proton-launch"
version = "0.2.1"
edition = "2021"
description = "Launch Windows games with Proton"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "proton-launch"
path = "src/main.rs"
required-features = ["commandline"]

[dependencies]

dirs = "4.0.0"
exe = "0.5.6"
image = "0.24.5"
keyvalues-parser = "0.1.0"
open = "4.0.0"
serde = { version = "1.0.156", features = ["derive"] }
serde_ini = "0.2.0"
thiserror = "1.0.39"
time = "0.3.20"
walkdir = "2.3.3"
xdg = "2.4"
zip = "0.6.4"
toml = "0.7.3"
zstd = "0.12.3"
tar = "0.4.38"
clap = { version = "4.1.10", features = ["derive", "string"], optional = true }

[features]
default = ["commandline"]
commandline = ["clap"]
